@@ -17,8 +17,11 @@
 
 package org.openqa.selenium.chromium;
 
+import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.internal.Require;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
@@ -27,18 +30,15 @@ import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.ExecuteMethod;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.chromium.ChromiumDriver.IS_CHROMIUM_BROWSER;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasLaunchApp implements AugmenterProvider<HasLaunchApp>, AdditionalHttpCommands {
 
   public static final String LAUNCH_APP = "launchApp";
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    LAUNCH_APP, new CommandInfo("/session/:sessionId/chromium/launch_app", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          LAUNCH_APP, new CommandInfo("/session/:sessionId/chromium/launch_app", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
@@ -62,7 +62,7 @@ public class AddHasLaunchApp implements AugmenterProvider<HasLaunchApp>, Additio
       public void launchApp(String id) {
         Require.nonNull("id of Chromium App", id);
 
-        executeMethod.execute(LAUNCH_APP, ImmutableMap.of("id", id));
+        executeMethod.execute(LAUNCH_APP, Map.of("id", id));
       }
     };
   }
