@@ -17,8 +17,11 @@
 
 package org.openqa.selenium.devtools.v85;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 import org.openqa.selenium.devtools.Command;
 import org.openqa.selenium.devtools.ConverterFunctions;
 import org.openqa.selenium.devtools.Event;
@@ -30,57 +33,61 @@ import org.openqa.selenium.devtools.v85.target.model.TargetInfo;
 import org.openqa.selenium.json.JsonInput;
 import org.openqa.selenium.json.TypeToken;
 
-import java.util.List;
-import java.util.Optional;
-import java.util.function.Function;
-
 public class V85Target implements org.openqa.selenium.devtools.idealized.target.Target {
   @Override
-  public Command<Void> detachFromTarget(Optional<SessionID> sessionId, Optional<TargetID> targetId) {
+  public Command<Void> detachFromTarget(
+      Optional<SessionID> sessionId, Optional<TargetID> targetId) {
     return Target.detachFromTarget(
-      sessionId.map(id -> new org.openqa.selenium.devtools.v85.target.model.SessionID(id.toString())),
-      targetId.map(id -> new org.openqa.selenium.devtools.v85.target.model.TargetID(id.toString())));
+        sessionId.map(
+            id -> new org.openqa.selenium.devtools.v85.target.model.SessionID(id.toString())),
+        targetId.map(
+            id -> new org.openqa.selenium.devtools.v85.target.model.TargetID(id.toString())));
   }
 
   @Override
-  public Command<List<org.openqa.selenium.devtools.idealized.target.model.TargetInfo>> getTargets() {
-    Function<JsonInput, List<TargetInfo>> mapper = ConverterFunctions.map(
-      "targetInfos",
-      new TypeToken<List<TargetInfo>>() {}.getType());
+  public Command<List<org.openqa.selenium.devtools.idealized.target.model.TargetInfo>>
+      getTargets() {
+    Function<JsonInput, List<TargetInfo>> mapper =
+        ConverterFunctions.map("targetInfos", new TypeToken<List<TargetInfo>>() {}.getType());
 
     return new Command<>(
-      Target.getTargets().getMethod(),
-      ImmutableMap.of(),
-      input -> {
-        List<TargetInfo> infos = mapper.apply(input);
-        return infos.stream()
-          .map(info -> new org.openqa.selenium.devtools.idealized.target.model.TargetInfo(
-            new TargetID(info.getTargetId().toString()),
-            info.getType(),
-            info.getTitle(),
-            info.getUrl(),
-            info.getAttached(),
-            info.getOpenerId().map(id -> new TargetID(id.toString())),
-            info.getBrowserContextId().map(id -> new BrowserContextID(id.toString()))
-          ))
-          .collect(ImmutableList.toImmutableList());
-      });
+        Target.getTargets().getMethod(),
+        Map.of(),
+        input -> {
+          List<TargetInfo> infos = mapper.apply(input);
+          return infos.stream()
+              .map(
+                  info ->
+                      new org.openqa.selenium.devtools.idealized.target.model.TargetInfo(
+                          new TargetID(info.getTargetId().toString()),
+                          info.getType(),
+                          info.getTitle(),
+                          info.getUrl(),
+                          info.getAttached(),
+                          info.getOpenerId().map(id -> new TargetID(id.toString())),
+                          info.getBrowserContextId()
+                              .map(id -> new BrowserContextID(id.toString()))))
+              .collect(Collectors.toUnmodifiableList());
+        });
   }
 
   @Override
   public Command<SessionID> attachToTarget(TargetID targetId) {
     Function<JsonInput, org.openqa.selenium.devtools.v85.target.model.SessionID> mapper =
-      ConverterFunctions.map("sessionId", org.openqa.selenium.devtools.v85.target.model.SessionID.class);
+        ConverterFunctions.map(
+            "sessionId", org.openqa.selenium.devtools.v85.target.model.SessionID.class);
 
     return new Command<>(
-      "Target.attachToTarget",
-      ImmutableMap.of(
-        "targetId", new org.openqa.selenium.devtools.v85.target.model.TargetID(targetId.toString()),
-        "flatten", true),
-      input -> {
-        org.openqa.selenium.devtools.v85.target.model.SessionID id = mapper.apply(input);
-        return new SessionID(id.toString());
-      });
+        "Target.attachToTarget",
+        Map.of(
+            "targetId",
+            new org.openqa.selenium.devtools.v85.target.model.TargetID(targetId.toString()),
+            "flatten",
+            true),
+        input -> {
+          org.openqa.selenium.devtools.v85.target.model.SessionID id = mapper.apply(input);
+          return new SessionID(id.toString());
+        });
   }
 
   @Override
@@ -91,12 +98,12 @@ public class V85Target implements org.openqa.selenium.devtools.idealized.target.
   @Override
   public Event<TargetID> detached() {
     return new Event<>(
-      "Target.detachedFromTarget",
-      input -> {
-        Function<JsonInput, org.openqa.selenium.devtools.v85.target.model.TargetID> converter =
-          ConverterFunctions.map("targetId", org.openqa.selenium.devtools.v85.target.model.TargetID.class);
-        return new TargetID(converter.apply(input).toString());
-      }
-    );
+        "Target.detachedFromTarget",
+        input -> {
+          Function<JsonInput, org.openqa.selenium.devtools.v85.target.model.TargetID> converter =
+              ConverterFunctions.map(
+                  "targetId", org.openqa.selenium.devtools.v85.target.model.TargetID.class);
+          return new TargetID(converter.apply(input).toString());
+        });
   }
 }
