@@ -17,28 +17,32 @@
 
 package org.openqa.selenium.edge;
 
+import static org.openqa.selenium.remote.Browser.EDGE;
+
 import com.google.auto.service.AutoService;
-import com.google.common.collect.ImmutableMap;
+import java.util.Map;
+import java.util.function.Predicate;
 import org.openqa.selenium.Capabilities;
 import org.openqa.selenium.remote.AdditionalHttpCommands;
 import org.openqa.selenium.remote.AugmenterProvider;
 import org.openqa.selenium.remote.CommandInfo;
 import org.openqa.selenium.remote.http.HttpMethod;
 
-import java.util.Map;
-import java.util.function.Predicate;
-
-import static org.openqa.selenium.remote.Browser.EDGE;
-
+@SuppressWarnings({"rawtypes", "RedundantSuppression"})
 @AutoService({AdditionalHttpCommands.class, AugmenterProvider.class})
 public class AddHasCasting extends org.openqa.selenium.chromium.AddHasCasting {
 
-  private static final Map<String, CommandInfo> COMMANDS = ImmutableMap.of(
-    GET_CAST_SINKS, new CommandInfo("session/:sessionId/ms/cast/get_sinks", HttpMethod.GET),
-    SET_CAST_SINK_TO_USE, new CommandInfo("session/:sessionId/ms/cast/set_sink_to_use", HttpMethod.POST),
-    START_CAST_TAB_MIRRORING, new CommandInfo("session/:sessionId/ms/cast/start_tab_mirroring", HttpMethod.POST),
-    GET_CAST_ISSUE_MESSAGE, new CommandInfo("session/:sessionId/ms/cast/get_issue_message", HttpMethod.GET),
-    STOP_CASTING, new CommandInfo("session/:sessionId/ms/cast/stop_casting", HttpMethod.POST));
+  private static final Map<String, CommandInfo> COMMANDS =
+      Map.of(
+          GET_CAST_SINKS, new CommandInfo("session/:sessionId/ms/cast/get_sinks", HttpMethod.GET),
+          SET_CAST_SINK_TO_USE,
+              new CommandInfo("session/:sessionId/ms/cast/set_sink_to_use", HttpMethod.POST),
+          START_CAST_TAB_MIRRORING,
+              new CommandInfo("session/:sessionId/ms/cast/start_tab_mirroring", HttpMethod.POST),
+          GET_CAST_ISSUE_MESSAGE,
+              new CommandInfo("session/:sessionId/ms/cast/get_issue_message", HttpMethod.GET),
+          STOP_CASTING,
+              new CommandInfo("session/:sessionId/ms/cast/stop_casting", HttpMethod.POST));
 
   @Override
   public Map<String, CommandInfo> getAdditionalCommands() {
